Changed some binds and name

--- a/hedo.cfg
+++ b/hedo.cfg
@@ -22,8 +22,8 @@ bind a "+moveleft"
 bind b "+zoom"
 bind c "+movedown"
 bind d "+moveright"
-bind e "+leanright"
-bind f "+activate"
+bind e "+activate"
+bind f "+mapexpand"
 bind g "+mapexpand"
 bind h "say ^0goblin mode ^1ACTIVATED!!!"
 bind i "mp_fireteamadmin"
@@ -32,7 +32,7 @@ bind k "say ^0growwlll"
 bind l "openlimbomenu"
 bind m "setspawnpt 1; say_team ^71"
 bind n "setspawnpt 0; say_team ^70"
-bind q "+leanleft"
+bind q "+moveup"
 bind r "+reload"
 bind s "+back"
 bind t "messagemode"
@@ -231,7 +231,7 @@ seta r_mode "-1"
 seta r_customwidth "1920"
 seta r_customheight "1080"
 seta r_highQualityVideo "0"
-seta r_gamma "3.000000"
+seta r_gamma "2.000000"
 seta r_dynamiclight "0"
 seta r_drawSun "0"
 seta r_fastsky "1"
@@ -244,7 +244,7 @@ seta r_picmip "3"
 seta r_mapoverbrightbits "3"
 seta r_intensity "1.5"
 seta r_wolffog "0"
-seta r_displayrefresh "165"
+seta r_displayrefresh "240"
 
 
 ////////////////////
@@ -265,7 +265,7 @@ seta m_filter "0"
 seta m_side "0.25"
 seta m_forward "0.25"
 seta m_yaw "0.022"
-seta m_pitch "0.016"
+seta m_pitch "0.022"
 
 ////////////////////
 ////////////////////
@@ -291,10 +291,10 @@ seta cl_yawspeed "0"
 
 seta snaps "40"
 seta rate "45000"
-seta name "^3b Y S T R Y ^0:["
+seta name "^7HeDo^7.^2I^7T^1A"
 seta mv_sensitivity "20"
 seta scr_conspeed "9999"
-seta sensitivity "1.50"
+seta sensitivity "1"
 
 ////////////////////
 ////////////////////
