--- a/movement.cfg
+++ b/movement.cfg
@@ -16,6 +16,5 @@ bind w                    +vstr forwardon forwardoff
 bind a                    +vstr movelefton moveleftoff
 bind s                    +vstr backon backoff
 bind d                    +vstr moverighton moverightoff
-bind space                +vstr jumpon jumpoff
-bind c                    +vstr crouchon crouchoff
+bind q                    +vstr jumpon jumpoff
 bind c                    +vstr crouchon crouchoff
